# ApkFucker

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml
docs/: PROJECT_STRUCTURE.md
docs/superpowers/plans/: 2026-04-05-apk-hacker-mvp-plan.md  2026-04-06-apk-hacker-tauri-redesign-plan.md  2026-04-13-architecture-convergence-plan.md  2026-04-18-tauri-winui-shell-refresh-plan.md  2026-04-21-apkhacker-refactor-plan-zh.md  2026-04-22-apkhacker-refactor-convergence-plan.md
docs/superpowers/specs/: 2026-04-05-apk-hacker-mvp-design.md  2026-04-06-apk-hacker-tauri-redesign.md  2026-04-18-tauri-winui-shell-refresh-design.md  2026-04-22-apkhacker-refactor-convergence-design.md
frontend/: index.html  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/lib/: api.ts  clipboard.ts  desktop.ts  executionDiagnostics.ts  types.ts  ws.ts
frontend/src/pages/: CaseQueuePage.tsx  CaseWorkspacePage.tsx
frontend/src/routes/: router.tsx
frontend/src/store/: app-store.ts
frontend/src/styles/: app.css
frontend/src/test/: api-adapters.test.ts  app-shell.test.tsx  queue-page.test.tsx  runtime-transport.test.ts  workspace-page.test.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/apk_hacker/static_engine/: __init__.py  analyzer.py
src/apk_hacker/tools/: adb_probe_backend.py  (+7 more)
templates/anti_detection/: frida_detect_bypass.js.j2
templates/crypto/: cipher_monitor.js.j2
templates/generic/: method_hook.js.j2
templates/ssl/: okhttp3_unpin.js.j2
tests/: conftest.py  fake_cli_tools.py
tests/application/: test_device_inventory_service.py  test_environment_service.py  test_execution_presets.py  test_execution_runtime.py  test_hook_plan_service.py  test_job_service.py  test_live_capture_runtime.py  test_mvp_flow.py  test_project_smoke.py  test_report_export_service.py  test_static_adapter.py  test_traffic_capture_service.py  test_workspace_controller.py  test_workspace_execution_service.py  test_workspace_hook_plan_service.py  test_workspace_inspection_service.py  test_workspace_registry_service.py  test_workspace_report_service.py  test_workspace_runtime_state.py  test_workspace_service.py  test_workspace_traffic_service.py
tests/domain/: test_execution_request.py  test_hook_advisor.py  test_hook_event_payloads.py  test_hook_plan_payloads.py  test_method_indexer.py  test_offline_rule_engine.py  test_static_payloads.py  test_traffic_payloads.py
tests/infrastructure/: test_fake_backend.py  test_hook_log_store.py  test_jadx_launcher.py  test_real_backend.py  test_script_renderer.py  test_traffic_flow_store.py
tests/interfaces/: test_cli_entry.py  test_environment_widget_flow.py  test_execution_logs_widget.py  test_fastapi_app.py  test_fastapi_cases.py  test_fastapi_execution.py  test_fastapi_reports.py  test_fastapi_traffic_live.py  test_fastapi_workspace.py  test_main_entry.py  test_main_window_settings.py  test_main_window_smoke.py  test_results_summary_widget.py  test_static_summary_widget.py  test_workbench_flow.py
tests/static_engine/: test_jadx_exporter.py  test_static_analyzer.py
tests/tools/: test_adb_probe_backend.py  test_demo_live_capture.py  test_demo_real_backend.py  test_frida_bootstrap_backend.py  test_frida_inject_backend.py  test_frida_probe_backend.py  test_frida_session_backend.py
(+101 files in other folders)
