[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apk-hacker"
version = "0.1.0"
description = "Local-first Android APK static and dynamic analysis workstation"
requires-python = ">=3.11"
dependencies = [
  "Jinja2>=3.1,<4",
  "PyQt6>=6.7,<7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-qt>=4.4,<5",
]

[project.scripts]
apk-hacker = "apk_hacker.interfaces.gui_pyqt.main:main"
apk-hacker-demo-real-backend = "apk_hacker.tools.demo_real_backend:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
