[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apk-hacker"
version = "0.1.0"
description = "Local-first Android APK static and dynamic analysis workstation"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "Jinja2>=3.1,<4",
  "httpx>=0.27,<1",
  "PyQt6>=6.7,<7",
  "uvicorn>=0.32,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-qt>=4.4,<5",
]

[project.scripts]
apk-hacker = "apk_hacker.interfaces.gui_pyqt.main:main"
apk-hacker-cli = "apk_hacker.interfaces.cli.main:main"
apk-hacker-demo-real-backend = "apk_hacker.tools.demo_real_backend:main"
apk-hacker-adb-probe-backend = "apk_hacker.tools.adb_probe_backend:main"
apk-hacker-frida-bootstrap-backend = "apk_hacker.tools.frida_bootstrap_backend:main"
apk-hacker-frida-probe-backend = "apk_hacker.tools.frida_probe_backend:main"
apk-hacker-frida-inject-backend = "apk_hacker.tools.frida_inject_backend:main"
apk-hacker-frida-session-backend = "apk_hacker.tools.frida_session_backend:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
